force-app/main/default/objects/POSMAsset__c/POSMAsset__c.object-meta.xml
<CustomObject>
    <label>POSM Asset</label>
    <pluralLabel>POSM Assets</pluralLabel>
    <nameField>
        <displayFormat>POSM-{0000}</displayFormat>
        <label>POSM Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <searchStatus>Active</searchStatus>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimensions__c</fullName>
        <label>Dimensions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxLifeDays__c</fullName>
        <label>Max Life Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restrictedPicklist>true</restrictedPicklist>
            <valueSetDefinition>
                <value>
                    <fullName>InStock</fullName>
                    <label>In Stock</label>
                </value>
                <value>
                    <fullName>Issued</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>