force-app/main/default/objects/POSMAsset__c/fields/Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Dimensions__c</fullName>
    <label>Dimensions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>