force-app/main/default/objects/POSMAsset__c/fields/MaxLifeDays__c.field-meta.xml
<CustomField>
    <fullName>MaxLifeDays__c</fullName>
    <label>MaxLifeDays</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>