force-app/main/default/objects/POSMAsset__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restrictedPicklist>true</restrictedPicklist>
        <valueSetDefinition>
            <value>
                <fullName>InStock</fullName>
                <default>True</default>
                <label>InStock</label>
            </value>
            <value>
                <fullName>Issued</fullName>
                <default>False</default>
                <label>Issued</label>
            </value>
            <value>
                <fullName>Retired</fullName>
                <default>False</default>
                <label>Retired</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>